--- a/zine-wall.html
+++ b/zine-wall.html
@@ -65,7 +65,7 @@
         </div>
 
         <!-- 載入中 -->
-        <div id="zine-wall-loading" class="zine-wall-loading">讀取中…</div>
+        <div id="zine-wall-loading" class="zine-wall-loading">讀取中 Loading…</div>
 
         <!-- 卡片網格（一個一個跑出來） -->
         <div id="zine-wall-grid" class="zine-wall-grid"></div>
